<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_de_la_t_che"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_rdv_m_decin"
        android:inputType="textCapSentences"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heure_de_l_v_nement"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnPickTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_12_00"
        android:backgroundTint="#C3C0C0"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/cbYearly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_p_ter_tous_les_ans_anniversaire_etc"
        android:textSize="14sp" />

</LinearLayout>